# Clearframe

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agent/: codebase-rules.md  naming-conventions.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: application.py  lifecycle.py  observability.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  broker.py  health.py  market.py  portfolio.py
backend/app/api/websocket/: market.py
backend/app/core/: cache.py  config.py  container.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  base.py  broker_connection.py  user.py
backend/app/domain/: constants.py  events.py
backend/app/integrations/angel_one/: __init__.py  client.py  token_mapping.py  websocket.py
backend/app/schemas/: auth.py  broker.py  market.py  portfolio.py  websocket.py
backend/app/services/auth/: service.py
backend/app/services/broker/: __init__.py  service.py
backend/app/services/market/: __init__.py  service.py
backend/app/services/portfolio/: service.py
backend/app/streaming/: __init__.py  broadcaster.py  market_data_processor.py  subscription_manager.py
backend/app/workers/: tasks.py
backend/docker/: Dockerfile
backend/tests/: test_cache_services.py  test_config.py  test_health.py  test_market_websocket.py
docs/: architecture.md  contribution-guide.md  deployment.md
frontend/: .env.example  README.md  (+4 more)
(+30 files in other folders)
